@@ -1,6 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <modules>
+        <module>api</module>
+        <module>core</module>
+        <module>plugin</module>
+        <module>test</module>
+    </modules>
+
     <parent>
         <groupId>com.atlassian.pom</groupId>
         <artifactId>atlassian-public-pom</artifactId>
@@ -8,16 +15,25 @@
     </parent>
 
     <groupId>com.atlassian.jira</groupId>
-    <artifactId>jira-rest-java-client</artifactId>
+    <artifactId>jira-rest-java-client-parent</artifactId>
     <version>2.0.0-m3-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
-    <name>atlassian-jira-rest-java-client</name>
-    <url>http://maven.apache.org</url>
+    <organization>
+        <name>Atlassian Pty Ltd</name>
+        <url>http://atlassian.com/</url>
+    </organization>
+
+    <name>Atlassian JIRA REST Java Client</name>
+    <description>
+        Java library which allows to easily talk to any JIRA 5.0+ instance.
+    </description>
+
     <issueManagement>
-        <system>Jira</system>
-        <url>https://studio.atlassian.com/browse/JRJC</url>
+        <system>JIRA</system>
+        <url>https://ecosystem.atlassian.net/browse/JRJC</url>
     </issueManagement>
+
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
@@ -25,20 +41,18 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <distributionManagement>
         <site>
             <id>atlassian-documentation</id>
             <url>dav:https://docs.atlassian.com/${project.artifactId}/${project.version}</url>
         </site>
     </distributionManagement>
-    <organization>
-        <name>Atlassian Pty Ltd</name>
-        <url>http://atlassian.com/</url>
-    </organization>
+
     <scm>
-        <connection>scm:git:ssh://git@bitbucket.org/atlassian/jira-rest-java-client.git</connection>
-        <developerConnection>scm:git:ssh://git@bitbucket.org/atlassian/jira-rest-java-client.git</developerConnection>
-        <url>https://bitbucket.org/atlassian/jira-rest-java-client/</url>
+        <connection>scm:git:ssh://git@bitbucket.org/atlassian/jira-rest-java-com.atlassian.jira.rest.client.git</connection>
+        <developerConnection>scm:git:ssh://git@bitbucket.org/atlassian/jira-rest-java-com.atlassian.jira.rest.client.git</developerConnection>
+        <url>https://bitbucket.org/atlassian/jira-rest-java-com.atlassian.jira.rest.client/</url>
     </scm>
 
     <properties>
@@ -46,92 +60,18 @@
         <jira.version>5.0</jira.version>
         <jira.data.version>${jira.version}</jira.data.version>
         <jira.test-lib.version>${jira.version}</jira.test-lib.version>
+        <remotable.plugins.version>0.6-SNAPSHOT</remotable.plugins.version>
         <jdkLevel>1.6</jdkLevel>
         <jersey.client.version>1.5</jersey.client.version>
+        <joda.time.version>1.6</joda.time.version>
+        <!-- IMPORTANT: keep synchronized with JIRA -->
+        <guava.version>10.0.1</guava.version>
+        <findbugs.version>1.3.7</findbugs.version>
+        <atlassian.httpclient.version>0.11.0</atlassian.httpclient.version>
+        <atlassian.concurrent.version>2.4.0-M9</atlassian.concurrent.version>
+        <amps.version>4.1</amps.version>
     </properties>
-    <build>
-        <testResources>
-            <testResource>
-                <directory>src/test/resources</directory>
-            </testResource>
-            <testResource>
-                <directory>src/test/xml</directory>
-                <targetPath>xml</targetPath>
-            </testResource>
-        </testResources>
-        <plugins>
-            <plugin>
-                <groupId>com.atlassian.maven.plugins</groupId>
-                <artifactId>maven-jira-plugin</artifactId>
-                <version>3.11</version>
-                <configuration>
-                    <productVersion>${jira.version}</productVersion>
-                    <productDataVersion>${jira.data.version}</productDataVersion>
-                    <jvmArgs>-Xmx1024m -XX:MaxPermSize=512m</jvmArgs>
-                    <!--<restVersion>4.2-SNAPSHOT</restVersion>-->
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>integration-test</id>
-                        <phase>integration-test</phase>
-                        <goals>
-                            <goal>integration-test</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.4.3</version>
-                <configuration>
-                    <includes>
-                        <include>**/*Test.java</include>
-                    </includes>
-                    <excludes>
-                        <exclude>it/**</exclude>
-                        <exclude>it2/**</exclude>
-                    </excludes>
-                    <forkMode>once</forkMode>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-release-plugin</artifactId>
-                <configuration>
-                    <preparationGoals>clean test</preparationGoals>
-                    <releaseProfiles>releaseProfile</releaseProfiles>
-                    <!--allowTimestampedSnapshots>true</allowTimestampedSnapshots-->
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>versions-maven-plugin</artifactId>
-                <version>1.3.1</version>
-                <configuration>
-                    <properties>
-                        <property>
-                            <name>jira.version</name>
-                            <dependencies>
-                                <dependency>
-                                    <groupId>com.atlassian.jira</groupId>
-                                    <artifactId>jira-core</artifactId>
-                                </dependency>
-                            </dependencies>
-                        </property>
-                    </properties>
-                </configuration>
-            </plugin>
-        </plugins>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.twdata.maven</groupId>
-                    <artifactId>cargo-maven2-plugin</artifactId>
-                    <version>1.0-beta-2-db2</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
+
     <reporting>
         <plugins>
             <plugin>
@@ -139,152 +79,10 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.7</version>
                 <configuration>
-                    <excludePackageNames>com.atlassian.jira.rest.client.internal.*</excludePackageNames>
+                    <excludePackageNames>com.atlassian.jira.rest.com.atlassian.jira.rest.client.internal.*</excludePackageNames>
                 </configuration>
             </plugin>
         </plugins>
     </reporting>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-core</artifactId>
-            <version>1.2.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-            <version>1.6</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-json</artifactId>
-            <version>${jersey.client.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-client</artifactId>
-            <version>${jersey.client.version}</version>
-        </dependency>
-        <!-- TODO compatibility with JIRA -->
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>13.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
-            <version>1.3.7</version>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
-            <version>1.2.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.atlassian.jira</groupId>
-            <artifactId>jira-func-tests</artifactId>
-            <version>${jira.test-lib.version}</version>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.sun.jersey</groupId>
-                    <artifactId>jersey-server</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.jms</groupId>
-                    <artifactId>jms</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>com.atlassian.jira</groupId>
-            <artifactId>jira-nimble-func-tests</artifactId>
-            <version>0.2.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.atlassian.httpclient</groupId>
-            <artifactId>atlassian-httpclient-apache-httpcomponents</artifactId>
-            <version>0.11.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.atlassian.util.concurrent</groupId>
-            <artifactId>atlassian-util-concurrent</artifactId>
-            <version>2.4.0-M9</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpmime</artifactId>
-            <version>4.1.2</version>
-        </dependency>
-    </dependencies>
-    <profiles>
-        <profile>
-            <id>jira-5.0</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <properties>
-                <jira.version>5.0</jira.version>
-                <jira.data.version>5.0</jira.data.version>
-                <jira.test-lib.version>5.0</jira.test-lib.version>
-            </properties>
-        </profile>
-        <profile>
-            <id>jira-5.1</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <properties>
-                <jira.version>5.1</jira.version>
-                <jira.data.version>5.1</jira.data.version>
-                <jira.test-lib.version>5.1</jira.test-lib.version>
-            </properties>
-        </profile>
-        <profile>
-            <id>jira-5.2</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <properties>
-                <jira.version>5.2</jira.version>
-                <jira.data.version>5.2</jira.data.version>
-                <jira.test-lib.version>5.2</jira.test-lib.version>
-            </properties>
-        </profile>
-        <profile>
-            <id>jira-6.0</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <properties>
-                <jira.version>6.0-SNAPSHOT</jira.version>
-                <jira.data.version>${jira.version}</jira.data.version>
-                <jira.test-lib.version>${jira.version}</jira.test-lib.version>
-            </properties>
-        </profile>
-        <profile>
-            <id>releaseProfile</id>
-            <properties>
-                <maven.test.skip>true</maven.test.skip>
-            </properties>
-        </profile>
-    </profiles>
 </project>
